--- a/Anisimov/Anisimov.csproj
+++ b/Anisimov/Anisimov.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Anisimov.Domain\Anisimov.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
